v3.10.0 (XXXX-XX-XX)
--------------------

* Since ArangoDB 3.8 there was a loophole for creating duplicate keys in the
  same collection. The requirements were:
  - cluster deployment
  - needs at least two collections (source and target), and the target
    collection must have more than one shard and must use a custom shard key.
  - inserting documents into the target collection must have happened via an AQL
    query like `FOR doc IN source INSERT doc INTO target`.
  In this particular combination, the document keys (`_key` attribute) from the
  source collection were used as-is for insertion into the target collection.
  However, as the target collection is not sharded by `_key` and uses a custom
  shard key, it is actually not allowed to specify user-defined values for
  `_key`. That check was missing since 3.8 in this particular combination and
  has now been added back. AQL queries attempting to insert documents into a
  collection like this will now fail with the error "must not specifiy _key for
  this collection", as they used to do before 3.8.

* Updated ArangoDB Starter to 0.15.5-preview-1.

* Updated arangosync to v2.12.0-preview-4.

* Improve error handling for passing wrong transaction ids / cursor ids / pregel
  job ids to request forwarding. Also prevent the error "transaction id not
  found" in cases when request forwarding was tried to a coordinator that was
  recently restarted.

* Fixed an invalid attribute access in AQL query optimization.
  Without the fix, a query such as

      LET data = { 
        "a": [ 
          ...
        ], 
      } 
      FOR d IN data["a"] 
        RETURN d

  could fail with error "invalid operand to FOR loop, expecting Array".

* Added support for AT LEAST quantifier for SEARCH.

* Fixed BTS-335 Ranges parsing fixed for nested queries.

* BTS-907: Fixed some rare SortNode related optimizer issues, when at least two
  or more SortNodes appeared in the AQL execution plan.
